    * Users & Contacts: Case-insensitive sorting of 'Full name' column
    * ntp/ntp.time parameters are now configurable via WATO
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)
    * FIX: Fixed editing of icon_image rules
    * Added support of locked hosts and folders ( created by CMDB )

    Checks & Agents:
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * Check_MK service is now able to output additional performance data
      user_time, system_time, children_user_time, children_system time
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * Windows agent: output ullTotalVirtual and ullAvailVirtual (not yet
      being used by check)
    * Solaris agent: add <<<uptime>>> section (thanks to Daniel Roettgermann)
    * Added new WATO configurable option inventory_services_rules for the
      windows services inventory check
    * Added new WATO configurable option inventory_processes_rules for the
      ps and ps.perf inventory
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set
    * win_dhcp_pools: do not inventorize empty pools any more. You can switch
      back to old behaviour with win_dhcp_pools_inventorize_empty = True
    * Added new Check for Eaton UPS Devices
    * zfsget: new check for monitoring ZFS disk usage for Linux, Solaris, FreeBSD
      (you need to update your agent as well)
    * Added new Checks for Gude PDU Units
    * logwatch: Working around confusion with OK/Ignore handling in logwatch_rules
    * logwatch_ec: Added new subcheck to forward all incoming logwatch messages
      to the event console. With this check you can use the Event Console 
      mechanisms and GUIs instead of the classic logwatch GUI. It can be 