@@ -61,6 +61,7 @@
            progress dialogs (e.g. bulk inventory mode)
     * FIX: Fixed editing of icon_image rules
     * Added support of locked hosts and folders ( created by CMDB )
+    * Logwatch: logwatch agents/plugins now with ok pattern support 
 
     Checks & Agents:
     * New check mssql_counters.locks: Monitors locking related information of
